--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 * text=auto
 *.css linguist-vendored
 *.less linguist-vendored
-*.rb linguist-language=PHP
+*.C linguist-language=PHP
+*.H linguist-language=PHP
